--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -13,7 +13,7 @@ a:hover {
 .btn-default,
 .btn-default:hover,
 .btn-default:focus {
-  color: #333;
+  color: black;
   text-shadow: none; /* Prevent inheritance from `body` */
   background-color: #fff;
   border: 1px solid #fff;
@@ -30,7 +30,7 @@ body {
   background-color: #333;
 }
 body {
-  color: #fff;
+  color: black;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
@@ -177,4 +177,20 @@ body {
   .cover-container {
     width: 700px;
   }
+}
+
+.bodyContainer{
+  border: 1px solid white;
+}
+.currentUser{
+  border: 1px solid white;
+}
+.notesandEvents{
+  border: 1px solid white;
+}
+.displayEvents{
+  border: 1px solid white;
+}
+.displayNotes{
+  border: 1px solid white;
 }
