--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -1,94 +1,109 @@
 html {
   background-color: #ECECEA; }
-  html body .site-wrapper {
-    display: table;
-    width: 100%;
-    height: 100%;
-    /* For at least Firefox */
-    min-height: 100%;
-    background-color: #ECECEA;
-    -webkit-box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.5);
-    box-shadow: inset 0 0 80px rgba(0, 0, 0, 0.5); }
-    html body .site-wrapper .site-wrapper-inner {
-      display: table-cell;
-      vertical-align: top; }
-      html body .site-wrapper .site-wrapper-inner .cover-container {
-        margin-right: auto;
-        margin-left: auto; }
-        html body .site-wrapper .site-wrapper-inner .cover-container .masthead.clearfix .inner {
-          padding: 30px;
-          color: black;
-          text-align: center;
-          text-shadow: 0 3.5px 3px rgba(0, 0, 0, 0.5); }
-          html body .site-wrapper .site-wrapper-inner .cover-container .masthead.clearfix .inner a img.masthead-brand.main-logo {
-            width: 10%;
-            height: 10%;
-            margin-top: 10px;
-            margin-bottom: 10px; }
-        html body .site-wrapper .site-wrapper-inner .cover-container .masthead.clearfix nav .masthead-nav > li {
-          display: inline-block; }
-        html body .site-wrapper .site-wrapper-inner .cover-container .masthead.clearfix nav .masthead-nav > li + li {
-          margin-left: 20px; }
-        html body .site-wrapper .site-wrapper-inner .cover-container .masthead.clearfix nav ul.nav.masthead-nav {
-          display: inline-block; }
-          html body .site-wrapper .site-wrapper-inner .cover-container .masthead.clearfix nav ul.nav.masthead-nav li {
-            font-size: 1.4em; }
-            html body .site-wrapper .site-wrapper-inner .cover-container .masthead.clearfix nav ul.nav.masthead-nav li a:hover {
-              color: #FF628A; }
-            html body .site-wrapper .site-wrapper-inner .cover-container .masthead.clearfix nav ul.nav.masthead-nav li a {
-              color: #D9853B;
-              padding-left: 1em; }
-        @media (min-width: 888px) {
-          html body .site-wrapper .site-wrapper-inner .cover-container .masthead.clearfix nav .masthead-brand {
-            float: left; }
-          html body .site-wrapper .site-wrapper-inner .cover-container .masthead.clearfix nav .masthead-nav {
-            float: right; } }
-        html body .site-wrapper .site-wrapper-inner .cover-container .inner.cover {
-          color: black;
-          text-align: center;
-          text-shadow: 0 3.5px 3px rgba(0, 0, 0, 0.5); }
-          html body .site-wrapper .site-wrapper-inner .cover-container .inner.cover h1.cover-heading {
-            color: DimGray; }
-          html body .site-wrapper .site-wrapper-inner .cover-container .inner.cover p.lead {
-            color: #74AFAD;
-            text-shadow: none; }
-        html body .site-wrapper .site-wrapper-inner .cover-container .bodyContainer.container.center .currentUser {
+
+body .site-wrapper {
+  display: table;
+  width: 100%;
+  height: 100%;
+  /* For at least Firefox */
+  min-height: 100%;
+  background-color: #ECECEA;
+  -webkit-box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0 0 80px rgba(0, 0, 0, 0.5); }
+  body .site-wrapper .site-wrapper-inner {
+    display: table-cell;
+    vertical-align: top; }
+    body .site-wrapper .site-wrapper-inner .cover-container {
+      margin-right: auto;
+      margin-left: auto; }
+      body .site-wrapper .site-wrapper-inner .cover-container .login-box {
+        background-color: #ECECEA; }
+      body .site-wrapper .site-wrapper-inner .cover-container .masthead.clearfix .inner {
+        padding: 30px;
+        color: black;
+        text-align: center;
+        text-shadow: 0 3.5px 3px rgba(0, 0, 0, 0.5); }
+        body .site-wrapper .site-wrapper-inner .cover-container .masthead.clearfix .inner a img.masthead-brand.main-logo {
+          width: 10%;
+          height: 10%;
+          margin-top: 10px;
+          margin-bottom: 10px; }
+      body .site-wrapper .site-wrapper-inner .cover-container .masthead.clearfix nav .masthead-nav > li {
+        display: inline-block; }
+      body .site-wrapper .site-wrapper-inner .cover-container .masthead.clearfix nav .masthead-nav > li + li {
+        margin-left: 20px; }
+      body .site-wrapper .site-wrapper-inner .cover-container .masthead.clearfix nav ul.nav.masthead-nav {
+        display: inline-block; }
+        body .site-wrapper .site-wrapper-inner .cover-container .masthead.clearfix nav ul.nav.masthead-nav li {
+          font-size: 1.4em; }
+          body .site-wrapper .site-wrapper-inner .cover-container .masthead.clearfix nav ul.nav.masthead-nav li a:hover {
+            color: #FF628A; }
+          body .site-wrapper .site-wrapper-inner .cover-container .masthead.clearfix nav ul.nav.masthead-nav li a {
+            color: #D9853B;
+            padding-left: 1em; }
+      @media (min-width: 888px) {
+        body .site-wrapper .site-wrapper-inner .cover-container .masthead.clearfix nav .masthead-brand {
+          float: left; }
+        body .site-wrapper .site-wrapper-inner .cover-container .masthead.clearfix nav .masthead-nav {
+          float: right; } }
+      body .site-wrapper .site-wrapper-inner .cover-container .inner.cover {
+        color: black;
+        text-align: center;
+        text-shadow: 0 3.5px 3px rgba(0, 0, 0, 0.5); }
+        body .site-wrapper .site-wrapper-inner .cover-container .inner.cover h1.cover-heading {
+          color: DimGray; }
+        body .site-wrapper .site-wrapper-inner .cover-container .inner.cover p.lead {
+          color: #74AFAD;
+          text-shadow: none; }
+      body .site-wrapper .site-wrapper-inner .cover-container .bodyContainer.container.center .currentUser {
+        display: flex;
+        flex-direction: row;
+        padding-bottom: 3em; }
+        body .site-wrapper .site-wrapper-inner .cover-container .bodyContainer.container.center .currentUser span.glyphicon.glyphicon-user {
           display: flex;
-          flex-direction: row;
-          padding-bottom: 3em; }
-          html body .site-wrapper .site-wrapper-inner .cover-container .bodyContainer.container.center .currentUser span.glyphicon.glyphicon-user {
-            display: flex;
-            color: DimGray;
-            padding-top: 1.8em; }
-          html body .site-wrapper .site-wrapper-inner .cover-container .bodyContainer.container.center .currentUser h3 {
-            color: DimGray;
-            padding-left: .5em; }
-        html body .site-wrapper .site-wrapper-inner .cover-container .bodyContainer.container.center .notesAndEvents.container.center {
+          color: DimGray;
+          padding-top: 1.8em; }
+        body .site-wrapper .site-wrapper-inner .cover-container .bodyContainer.container.center .currentUser h3 {
+          color: DimGray;
+          padding-left: .5em; }
+      body .site-wrapper .site-wrapper-inner .cover-container .bodyContainer.container.center .notesAndEvents.container.center {
+        display: flex;
+        flex-direction: row; }
+        body .site-wrapper .site-wrapper-inner .cover-container .bodyContainer.container.center .notesAndEvents.container.center .displayEvents.container.col-md-6 {
           display: flex;
-          flex-direction: row; }
-          html body .site-wrapper .site-wrapper-inner .cover-container .bodyContainer.container.center .notesAndEvents.container.center .displayEvents.container.col-md-6 {
-            display: flex;
-            flex-direction: column;
-            margin-right: 1em; }
-            html body .site-wrapper .site-wrapper-inner .cover-container .bodyContainer.container.center .notesAndEvents.container.center .displayEvents.container.col-md-6 input.addEvent {
-              margin: 1em;
-              background-color: DimGray;
-              color: #ECECEA; }
-            html body .site-wrapper .site-wrapper-inner .cover-container .bodyContainer.container.center .notesAndEvents.container.center .displayEvents.container.col-md-6 input.allEvents {
-              margin: 1em;
-              background-color: #ECECEA;
-              color: DimGray; }
-          html body .site-wrapper .site-wrapper-inner .cover-container .bodyContainer.container.center .notesAndEvents.container.center .displayNotes.container.col-md-6 input.addNote {
+          flex-direction: column;
+          margin-left: 4.8em; }
+          body .site-wrapper .site-wrapper-inner .cover-container .bodyContainer.container.center .notesAndEvents.container.center .displayEvents.container.col-md-6 button.addEventButton {
+            height: 30%;
+            width: 80%;
             margin: 1em;
+            font-size: 2vh;
             background-color: DimGray;
             color: #ECECEA; }
-          html body .site-wrapper .site-wrapper-inner .cover-container .bodyContainer.container.center .notesAndEvents.container.center .displayNotes.container.col-md-6 input.allNotes {
+          body .site-wrapper .site-wrapper-inner .cover-container .bodyContainer.container.center .notesAndEvents.container.center .displayEvents.container.col-md-6 input.allEvents {
+            height: 30%;
+            width: 80%;
             margin: 1em;
             background-color: #ECECEA;
             color: DimGray; }
-        html body .site-wrapper .site-wrapper-inner .cover-container footer .mastfoot {
-          background-color: #ECECEA; }
-          html body .site-wrapper .site-wrapper-inner .cover-container footer .mastfoot .inner {
-            color: #D9853B; }
+          body .site-wrapper .site-wrapper-inner .cover-container .bodyContainer.container.center .notesAndEvents.container.center .displayEvents.container.col-md-6 table.eventTable .eventTableBody tr td {
+            padding: 4em; }
+        body .site-wrapper .site-wrapper-inner .cover-container .bodyContainer.container.center .notesAndEvents.container.center .displayNotes.container.col-md-6 button.addNoteButton {
+          height: 26%;
+          width: 80%;
+          margin: 1em;
+          font-size: 2vh;
+          background-color: DimGray;
+          color: #ECECEA; }
+        body .site-wrapper .site-wrapper-inner .cover-container .bodyContainer.container.center .notesAndEvents.container.center .displayNotes.container.col-md-6 input.allNotes {
+          height: 24%;
+          width: 80%;
+          margin: 1em;
+          background-color: #ECECEA;
+          color: DimGray; }
+      body .site-wrapper .site-wrapper-inner .cover-container footer .mastfoot {
+        background-color: #ECECEA; }
+        body .site-wrapper .site-wrapper-inner .cover-container footer .mastfoot .inner {
+          color: #D9853B; }
 
 /*# sourceMappingURL=base.css.map */
