--- a/public/assets/scss/base.scss
+++ b/public/assets/scss/base.scss
@@ -15,7 +15,7 @@ $quinary-color: #FF628A;
 
 
 html {
-  background-color: $primary-color;
+  background-color: $secondary-color;
 }
 
 body{
@@ -130,13 +130,47 @@ body{
               background-color: $primary-color;
               color: $secondary-color;
             }
+            div.overFlowTable {
+              height: 200px;
+              overflow: auto;
+            }
             table.eventTable {
-              .eventTableBody {
+              background-color: $secondary-color;
+              tbody.eventsTableBody {
+
                 tr {
-                  td {
-                  padding: 4em;
+                  color: $primary-color;
+                  th {
+                    color: $quaternary-color;
+                    font-weight: normal;
+                    padding-left: 2em;
+                    padding-right: 2em;
+                  }
+                  td.title {
+                    color: $quinary-color;
+                    padding-right: 2em;
+                  }
+                  td.content {
+                    padding-right: 2em;
+                  }
+                  td
+                  {
+                    button.editEventButton {
+                      color: $secondary-color;
+                      background-color: $primary-color;
+                      padding-right: 1em;
+                      border: .25em;
+                      border-radius: 15px;
+                    }
+                    button.deleteEventButton {
+                      color: $secondary-color;
+                      background-color: $primary-color;
+                      padding-right: 2em;
+                      border: .25em;
+                      border-radius: 15px;
+                    }
+                  }
                 }
-              }
               }
             }
           }
