--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -12,10 +12,10 @@ a:hover {
 /* Custom default button */
 .btn-default,
 .btn-default:hover,
-.btn-default:focus {
+.btn-default:focus { , , , ,
   color: black;
   text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
+  background-color:  , , ,#fff;
   border: 1px solid #fff;
 }
 
@@ -27,7 +27,7 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
+  background-color: #ECECEA;
 }
 body {
   color: black;
@@ -83,7 +83,7 @@ body {
   padding-left: 0;
   font-size: 16px;
   font-weight: bold;
-  color: #fff; /* IE8 proofing */
+  color: #D9853B; /* IE8 proofing */
   color: rgba(255,255,255,.75);
   border-bottom: 2px solid transparent;
 }
