--- a/public/assets/scss/base.scss
+++ b/public/assets/scss/base.scss
@@ -8,9 +8,9 @@
 //   [fifth = soft watermelon]
 $primary-color: #ECECEA;
 $secondary-color: DimGray;
-$tertiary-color: #74AFAD;
-$quaternary-color: #D9853B;
-$quinary-color: #FF628A;
+$tertiary-color: #7F1B15;
+$quaternary-color: #400D0B;
+$quinary-color: #FF362B;
 
 
 
@@ -147,7 +147,7 @@ body{
                     padding-right: 2em;
                   }
                   td.title {
-                    color: $quinary-color;
+                    color: $tertiary-color;
                     padding-right: 2em;
                   }
                   td.content {
