--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6,7 +6,7 @@
 a,
 a:focus,
 a:hover {
-  color: #fff;
+  color: #FF362B;
 }
 
 /* Custom default button */
@@ -83,21 +83,21 @@ body {
   padding-left: 0;
   font-size: 16px;
   font-weight: bold;
-  color: #D9853B; /* IE8 proofing */
-  color: rgba(255,255,255,.75);
+  color: #400D0B; /* IE8 proofing */
+  color: #400D0B;
   border-bottom: 2px solid transparent;
 }
 .masthead-nav > li > a:hover,
 .masthead-nav > li > a:focus {
   background-color: transparent;
-  border-bottom-color: #a9a9a9;
-  border-bottom-color: rgba(255,255,255,.25);
+  border-bottom-color: #FF362B;
+  border-bottom-color: #FF362B);
 }
 .masthead-nav > .active > a,
 .masthead-nav > .active > a:hover,
 .masthead-nav > .active > a:focus {
-  color: #fff;
-  border-bottom-color: #fff;
+  color: #400D0B;
+  border-bottom-color: #400D0B;
 }
 
 @media (min-width: 768px) {
